calendar view tested and fragments added for bottom navigation button, tested, need to fix home view as its inflating to other views

--- a/proActiveTaskScheduler/app/src/main/AndroidManifest.xml
+++ b/proActiveTaskScheduler/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".CalenderViewActivity"></activity>
+        <activity android:name=".HomeFragment"></activity>
+        <activity android:name=".CalendarViewFragment"></activity>
+        <activity android:name=".TaskDetailFragment"></activity>
     </application>
 
 </manifest>
